# linux-shell

./: README.md  开发文档.docx  答辩文档.doc
build-shell-project-C_C_2024_06_24-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  shell-project
build-shell-project-C_C_2024_06_24-Debug/.cmake/api/v1/reply/: codemodel-v2-326a213801f818d7b893.json  directory-.-Debug-fa95e6eddcaedccfdf5f.json  index-2024-06-24T07-59-21-0248.json  target-shell-project-Debug-ada30063548d69f2a22d.json
build-shell-project-C_C_2024_06_24-Debug/.cmake/api/v1/reply.prev/: cache-v2-7b2e69488325e05fece5.json  cmakeFiles-v1-bb9ef6412a06ddbefec0.json  codemodel-v2-43afdbfa2f412a3853f8.json  directory-.-Debug-0e6e9d24066223434d1f.json  index-2024-06-24T07-49-49-0571.json  target-shell-project-Debug-a8770754ae162cd026cd.json  target-shell-project_autogen-Debug-f5a2ae693ab4b8ccf102.json
build-shell-project-C_C_2024_06_24-Debug/.qt/: QtDeploySupport.cmake
build-shell-project-C_C_2024_06_24-Debug/shell-project_autogen/: moc_predefs.h
shell-project/: CMakeLists.txt  main.cpp  shell.cpp  shell.h
